--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,12 +50,40 @@ body {
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
+
+.grass {
+    background-color: #77c850;
+}
+
+.fire {
+    background-color: #ee7f30;
+}
+.normal {
+    background-color: #a6a877;
+}
+.water {
+    background-color: #678fee;
+}
+.eletric {
+    background-color: #f7cf2e;
+}
+.ice {
+    background-color: #98d5d7;
+}
+.ground {
+    background-color: #dfbf69;
+}
+.flying {
+    background-color: #a98ff0;
+}
+.bug {
+    background-color: #a8b720;
+}
 .pokemon {
     display: flex;
     flex-direction: column;
     margin: .5rem;
     padding: 1rem;
-    background-color:#49D0B0;
     border-radius: 1rem;
     
    
@@ -64,6 +92,7 @@ body {
 .pokemon .name {
     color: white;
    margin-bottom: .25rem;
+   text-transform: capitalize;
 }
 
 .pokemon .number {
@@ -79,18 +108,22 @@ body {
     justify-content: space-between;
 }
 .pokemon .detail .types {
+    color: rgb(255, 255, 255);
     margin: 0;
     padding: 0;
     list-style: none;
+    filter: brightness(1.1);
+
 }
 
 .pokemon .detail .types .type {
-    background-color: #61e1ca;
-    color: white;
+    
+    
     padding: .25rem .5rem;
     font-size: .625rem;
     margin: .25rem;
     border-radius: 1rem;
+    
 
 }
 
